update swagger api for update user
